--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/OA_LUB_05.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/OA_LUB_05.jrxml
@@ -218,7 +218,7 @@
 				<textElement>
 					<font fontName="TH Sarabun New" size="15" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[" ๒. จำนวนน้ำมันหล่อลื่นที่ขออนุญาต (ซื้อต่อเดือน) (เฉพาะรายเก่า)"]]></textFieldExpression>
+				<textFieldExpression><![CDATA[" ๒. จำนวนน้ำมันหล่อลื่นที่ขออนุญาตใช้ (ซื้อต่อเดือน) (เฉพาะรายเก่า)"]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnHeader>
