--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/OA_LUB_02.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/OA_LUB_02.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
+<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Report_02" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="2ae589b1-0d67-4f6f-b1d9-9303ca5b62aa">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<style name="font" fontName="TH Sarabun New" fontSize="15">
@@ -70,7 +70,7 @@
 				<textElement>
 					<font fontName="TH Sarabun New" size="15"/>
 				</textElement>
-				<textFieldExpression><![CDATA["๕.๑ การจำบัญชีประจำวัน"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["๕.๑ การจัดทำบัญชีประจำวัน"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="font" x="0" y="14" width="554" height="20" uuid="e7c3d1e2-6011-4e2a-9350-0ce1340b3fd3"/>
@@ -84,7 +84,7 @@
 				<textElement>
 					<font fontName="TH Sarabun New" size="15"/>
 				</textElement>
-				<textFieldExpression><![CDATA["บัญชีประจำวันแสดงการรับ-จ่ายน้ำมันหล่อลื่น (สค.๐๓)"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["บัญชีประจำวันแสดงการรับ-จ่ายน้ำมันหล่อลื่น (นล.๐๓)"]]></textFieldExpression>
 			</textField>
 			<ellipse>
 				<reportElement x="56" y="101" width="3" height="3" backcolor="#000000" uuid="27da23e9-3900-44cb-b846-2b86e4f3c7e0"/>
@@ -153,7 +153,7 @@
 				<textElement>
 					<font fontName="TH Sarabun New" size="15"/>
 				</textElement>
-				<textFieldExpression><![CDATA["๕.๑ การจัดทำงบเดือน"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["๕.๒ การจัดทำงบเดือน"]]></textFieldExpression>
 			</textField>
 			<ellipse>
 				<reportElement x="56" y="240" width="3" height="3" backcolor="#000000" uuid="47f6ece1-d4d0-4c44-9969-411b5baab9e9"/>
@@ -163,7 +163,7 @@
 				<textElement>
 					<font fontName="TH Sarabun New" size="15"/>
 				</textElement>
-				<textFieldExpression><![CDATA["งบเดือนแสดงรายการรับ-จ่ายน้ำมันหล่อลื่น (สค.๐๔)"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["งบเดือนแสดงรายการรับ-จ่ายน้ำมันหล่อลื่น (นล.๐๔)"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="font" x="395" y="210" width="19" height="20" uuid="f9294dd6-0008-4e13-879b-8bc8c3f6d8fe"/>
@@ -232,7 +232,7 @@
 				<textElement>
 					<font fontName="TH Sarabun New" size="15"/>
 				</textElement>
-				<textFieldExpression><![CDATA["งบเดือนแสดงรายการรับ-จ่ายน้ำมันหล่อลื่น (สค.๐๔ก)"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["งบเดือนแสดงรายการรับ-จ่ายน้ำมันหล่อลื่น (นล.๐๔ก)"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement style="font" positionType="FixRelativeToBottom" x="344" y="358" width="20" height="20" uuid="caad60a6-9c92-4958-ab63-3c64591e24ee"/>
@@ -393,7 +393,7 @@
 				<textElement>
 					<font fontName="TH Sarabun New" size="15"/>
 				</textElement>
-				<textFieldExpression><![CDATA["ผู้ได้รับอนุญาต"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["ผู้ไม่ได้รับอนุญาต"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement style="font" positionType="FixRelativeToBottom" x="314" y="625" width="20" height="20" uuid="57f32572-33a1-4b66-9a75-cf5b7ead9dc3"/>
